@@ -6,18 +6,29 @@
   <artifactId>users</artifactId>
   <version>1.0</version>
   <name>users</name>
+  <packaging>war</packaging>
+
   <properties>
     <hibernate.validator.version>4.1.0.Final</hibernate.validator.version>
     <validation.api.version>1.0.0.GA</validation.api.version>
     <version.org.jboss.errai>3.2.0-SNAPSHOT</version.org.jboss.errai>
+    <gwt.version>2.7.0</gwt.version>
+    <version.org.slf4j>1.7.2</version.org.slf4j>
     <!-- temporary: makes the enforcerRule (illegal-transitive-dependency-check) not to break the build -->
     <illegaltransitivereportonly>true</illegaltransitivereportonly>
   </properties>
+
   <dependencies>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>${version.org.slf4j}</version>
+    </dependency>
+
     <dependency>
       <groupId>com.google.gwt</groupId>
       <artifactId>gwt-user</artifactId>
-      <version>2.7.0</version>
+      <version>${gwt.version}</version>
     </dependency>
     
     <dependency>
@@ -58,6 +69,12 @@
 
     <dependency>
       <groupId>org.kie</groupId>
+      <artifactId>kie-api</artifactId>
+      <version>6.3.0-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.kie</groupId>
       <artifactId>form-modeler-rendering-api</artifactId>
       <version>0.1-SNAPSHOT</version>
     </dependency>
@@ -65,6 +82,46 @@
   </dependencies>
   <build>
     <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>gwt-maven-plugin</artifactId>
+        <version>${gwt.version}</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>compile</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <logLevel>INFO</logLevel>
+          <noServer>false</noServer>
+          <extraJvmArgs>-Xmx2048m -XX:CompileThreshold=7000 -XX:MaxPermSize=256M  -Derrai.jboss.javaopts="-XX:MaxPermSize=256m"</extraJvmArgs>
+          <disableCastChecking>true</disableCastChecking>
+          <runTarget>index.html</runTarget>
+          <soyc>false</soyc>
+          <hostedWebapp>src/main/webapp</hostedWebapp>
+          <draftCompile>true</draftCompile>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-clean-plugin</artifactId>
+        <version>2.4.1</version>
+        <configuration>
+          <filesets>
+            <fileset>
+              <directory>${basedir}</directory>
+              <includes>
+                <include>src/main/webapp/app/</include>
+                <include>src/main/webapp/WEB-INF/deploy/</include>
+                <include>src/main/webapp/WEB-INF/lib/</include>
+                <include>**/gwt-unitCache/**</include>
+                <include>.errai/</include>
+              </includes>
+            </fileset>
+          </filesets>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>org.kie</groupId>
         <artifactId>kie-maven-plugin</artifactId>
